[gd_scene load_steps=10 format=3 uid="uid://bomrvn73s54bp"]

[ext_resource type="Script" path="res://enemies/keese.gd" id="1_ds3md"]
[ext_resource type="Texture2D" uid="uid://mbv6kpeoe2ax" path="res://assets/Proto_keese.png" id="1_fskyi"]
[ext_resource type="PackedScene" uid="uid://c3eu6knqcplal" path="res://overlap/hurtbox.tscn" id="2_ohuor"]
[ext_resource type="PackedScene" uid="uid://iswca5knc2e3" path="res://stats.tscn" id="4_ay1mg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_moh1f"]
atlas = ExtResource("1_fskyi")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ru0ym"]
atlas = ExtResource("1_fskyi")
region = Rect2(17, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ia5yg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_moh1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ru0ym")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rytqa"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gl2a2"]
radius = 8.0

[node name="keese" type="CharacterBody2D"]
z_index = 1
collision_layer = 0
script = ExtResource("1_ds3md")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ia5yg")
animation = &"fly"
autoplay = "fly"
frame_progress = 0.0299417

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rytqa")

[node name="hurtbox" parent="." instance=ExtResource("2_ohuor")]
visible = false
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" parent="hurtbox" index="0"]
shape = SubResource("CircleShape2D_gl2a2")
debug_color = Color(0.993379, 0, 0.238465, 0.42)

[node name="Stats" parent="." instance=ExtResource("4_ay1mg")]
max_health = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.125
one_shot = true

[node name="HealthLabel" type="Label" parent="."]
offset_left = -15.0
offset_top = -20.0
offset_right = 41.0
offset_bottom = 3.0
scale = Vector2(0.541809, 0.541809)
vertical_alignment = 1

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]

[editable path="hurtbox"]
